--- a/book_browse/templates/registration/login.html
+++ b/book_browse/templates/registration/login.html
@@ -13,6 +13,7 @@
             {{ form.as_p }}
             <button type="submit">Войти</button>
           </form></p>
+          <a href="{% url 'signup'%}"><p class="mb-4">Ещё не зарегистрированы?</p></a>
         </div>
       </div>
     </div>
